--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile project(':widgets')
-    compile 'jp.co.crowdworks:realm-java-helpers:0.0.10'
+    compile 'jp.co.crowdworks:realm-java-helpers-bolts:0.1.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
 
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
