--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <service android:name=".service.GitHubViewerService"/>
         <service android:name=".service.BackgroundFetchService"/>
+        <service android:name=".service.NotificationDismissalCallbackService"/>
     </application>
 
 </manifest>
