--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
@@ -33,15 +32,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
+    compile project(':model')
+    compile project(':core') // TODO: will be removed in future?
     compile project(':widgets')
-    compile 'jp.co.crowdworks:realm-java-helpers-bolts:0.1.1'
-    compile 'com.parse.bolts:bolts-tasks:1.4.0'
+    compile 'jp.co.crowdworks:realm-java-helpers-bolts:0.1.1' // TODO: will be removed in future.
 
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
-    compile 'com.facebook.stetho:stetho:1.4.2'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
 
     compile 'frankiesardo:icepick:3.2.0'
