--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile project(':model')
-    compile project(':core') // TODO: will be removed in future?
+    compile (project(':core')) {
+      exclude group: 'jp.co.crowdworks', module: 'realm-java-helpers-bolts'
+    }
     compile project(':widgets')
-    compile 'jp.co.crowdworks:realm-java-helpers-bolts:0.1.1' // TODO: will be removed in future.
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.uphyca:stetho_realm:2.0.0'
