--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo' }
-        maven { url 'https://github.com/YusukeIwaki/realm-java-helpers/raw/master/repo' }
+        maven { url 'https://jitpack.io' }
         maven { url "https://clojars.org/repo/" }
     }
 }
