--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile project(':widgets')
-    compile 'jp.co.crowdworks:realm-java-helpers-bolts:0.1.1'
+    compile 'com.github.YusukeIwaki:realm-java-helpers:1.1.0'
     compile 'com.parse.bolts:bolts-tasks:1.4.0'
 
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
