--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
